# Nbody-in-Sunway

./: README.md  athread_compile.sh  core  data.txt  meson.build  meson_options.txt  mpi_compile.sh  mpi_result.txt  particles.txt  particles2.txt  run.sh  run_without_mpi.sh  swbuild.sh  swrun.sh  without_mpi_compile.sh
src/: main.cc  main.h  main.mpi.cc  meson.build  zone.cc  zone.h
src/master_slave/: body.h  calculate.cc  calculate.h  main.h  main.mpe copy.cc  main.mpe.cc  master.cc  master.h  slave  slave.cc  static.h  utils.h  zone.cc  zone.h
tools/: build_particles  build_particles.cc  particles.txt
